[project]
name = "priorityx"
version = "0.1.0"
description = "Entity prioritization and escalation detection using GLMM statistical models"
authors = [
    {name = "Okky Mabruri", email = "okkymbrur@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["prioritization", "risk-analysis", "glmm", "escalation-detection", "statistical-modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "adjusttext>=1.3.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyarrow>=21.0.0",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "pytest-cov>=4.0",
]

